changing note block titles

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1101,7 +1101,7 @@ morley_hist <- ggplot(morley, aes(x = Speed, fill = as_factor(Expt))) +
 morley_hist
 ```
 
-> Factors impact plots in two ways:
+> **Note:** Factors impact plots in two ways:
 (1) ensuring a color is mapped as discretely where appropriate (like in this
 example) and (2) the ordering of levels in a plot. `ggplot` takes into account
 the order of the factor levels as opposed to the order that is displayed in
@@ -1403,7 +1403,7 @@ take your computer some time to open the image. On the other hand, you can zoom
 into / scale up vector graphics as much as you like without the image looking
 bad, while raster images eventually start to look "pixellated." 
 
-> **PDF files:** 
+> **Note:** 
 > The portable document format [PDF](https://en.wikipedia.org/wiki/PDF) (`.pdf`) is commonly used to
 > store *both* raster and vector formats. If you try to open a PDF and it's taking a long time
 > to load, it may be because there is a complicated vector graphics image that your computer is rendering. 
