fixed read csv caption in intro rmd

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -253,7 +253,9 @@ file satisfies everything else that the `read_csv` function expects in the defau
 use-case. Figure \@ref(fig:img-read-csv) describes how we use the `read_csv`
 to read data into R. 
 
-``` {r img-read-csv, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for reading a csv file.", fig.retina = 2, out.width="100%"}
+(ref:img-read-csv) Syntax for the `read_csv` function.
+
+``` {r img-read-csv, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-read-csv)", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/read_csv_function.jpeg")
 ```
 
