fixing note boxes, captions

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -47,7 +47,7 @@ labels for the observations in the **test set**, then we have some
 confidence that our classifier might also accurately predict the class
 labels for new observations without known class labels.
 
-> Note: if there were a golden rule of machine learning, \index{golden rule of machine learning} it might be this: 
+> **Note:** if there were a golden rule of machine learning, \index{golden rule of machine learning} it might be this: 
 > *you cannot use the test data to build the model!* If you do, the model gets to
 > "see" the test data in advance, making it look more accurate than it really
 > is. Imagine how bad it would be to overestimate your classifier's accuracy
