--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -87,7 +87,7 @@ principal component analysis, multidimensional scaling, and more;
 see the additional resources section at the end of this chapter 
 for where to begin learning more about these other methods.
 
-> There are also so-called *semisupervised* tasks, \index{semisupervised} 
+> **Note:** There are also so-called *semisupervised* tasks, \index{semisupervised} 
 > where only some of the data come with response variable labels/values, 
 > but the vast majority don't. 
 > The goal is to try to uncover underlying structure in the data 
