--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -834,7 +834,7 @@ a deep understanding of the problem---as well as the wrangling tools
 from previous chapters---to engineer useful new features that improve
 predictive performance.
 
-> Note that feature engineering
+> **Note:** feature engineering
 > is *part of tuning your model*, and as such you must not use your test data
 > to evaluate the quality of the features you produce. You are free to use
 > cross-validation, though!
