--- a/authors.Rmd
+++ b/authors.Rmd
@@ -6,4 +6,4 @@ Tiffany Timbers is an Assistant Professor of Teaching in the Department of Stati
 Trevor Campbell is an Assistant Professor in the Department of Statistics at the University of British Columbia. His research focuses on automated, scalable Bayesian inference algorithms, Bayesian nonparametrics, streaming data, and Bayesian theory. He was previously a postdoctoral associate advised by Tamara Broderick in the Computer Science and Artificial Intelligence Laboratory (CSAIL) and Institute for Data, Systems, and Society (IDSS) at MIT, a Ph.D. candidate under Jonathan How in the Laboratory for Information and Decision Systems (LIDS) at MIT, and before that he was in the Engineering Science program at the University of Toronto.
 
 
-Melissa Lee is an Assistant Professor of Teaching in the Department of Statistics at the University of British Columbia. With a focus on teaching, she develops curriculum for undergraduate statistics and data science courses. She enjoys using student-centered approaches, developing and assessing open educational resources, and promoting equity, diversity, and inclusion initiatives.
+Melissa Lee is an Assistant Professor of Teaching in the Department of Statistics at the University of British Columbia. She teaches and develops curriculum for undergraduate statistics and data science courses. Her work focuses on student-centered approaches to teaching, developing and assessing open educational resources, and promoting equity, diversity, and inclusion initiatives.
