removing zoom message in 3D plot from pdf version

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -7,6 +7,9 @@ library(knitr)
 
 knitr::opts_chunk$set(echo = TRUE, 
                       fig.align = "center")
+options(knitr.table.format = function() {
+  if (knitr::is_latex_output()) 'latex' else 'pandoc'
+})
 ```
 
 ## Overview 
@@ -638,7 +641,13 @@ if(!is_latex_output()){
 }
 ```
 
-*Click and drag the plot above to rotate it, and scroll to zoom. Note that in
+
+
+```{r, eval=knitr::is_html_output(), echo=FALSE}
+cat('Click and drag the plot above to rotate it, and scroll to zoom.')
+```
+
+*Note that in
 general we recommend against using 3D visualizations; here we show the data in
 3D only to illustrate what "higher dimensions" and "nearest neighbors" look like,
 for learning purposes.*
