changed ? symbol to just ? in appendix for consistency

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -661,7 +661,7 @@ There are many R functions in the `tidyverse` package (and beyond!), and
 nobody can be expected to remember what every one of them does
 nor all of the arguments we have to give them. Fortunately R provides 
 the `?` symbol, which 
-\index{aaaquestionmark@? symbol|see{documentation}}
+\index{aaaquestionmark@?|see{documentation}}
 \index{help|see{documentation}}
 \index{documentation} provides an easy way to pull up the documentation for 
 most functions quickly. To use the `?` symbol to access documentation, you 
