fixed pipe index entries

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -999,7 +999,7 @@ home.  However, in Montréal, this does not seem to be the case!
 In R, we often have to call multiple functions in a sequence to process a data
 frame. The basic ways of doing this can become quickly unreadable if there are
 many steps. For example, suppose we need to perform three operations on a data
-frame called `data`:  \index{pipe}\index{pipesymb@\texttt{|>}|see{pipe}}
+frame called `data`:  \index{pipe}\index{aaapipesymb@\vert{}>|see{pipe}}
 
 1)  add a new column `new_col` that is double another `old_col`
 2)  filter for rows where another column, `other_col`, is more than 5, and
@@ -1071,7 +1071,7 @@ output <- data |>
 > books and other resources.
 > In most cases these two pipes are interchangeable and either can be used.
 
-\index{pipe}\index{pipesymbb@\texttt{%>%}|see{pipe}}
+\index{pipe}\index{aaapipesymbb@\%>\%|see{pipe}}
 
 ### Using `|>` to combine `filter` and `select`
 
