--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -568,7 +568,7 @@ Based on $K=5$ nearest neighbors with these three predictors we would classify t
 Figure \@ref(fig:05-more) shows what the data look like when we visualize them 
 as a 3-dimensional scatter with lines from the new observation to its five nearest neighbors.
 
-```{r 05-more, echo = FALSE, message = FALSE, fig.cap = "3D scatter plot of the standardized symmetry, concavity, and perimeter variables.", fig.retina=2, out.width="80%"}
+```{r 05-more, echo = FALSE, message = FALSE, fig.cap = "3D scatter plot of the standardized symmetry, concavity, and perimeter variables. Note that in general we recommend against using 3D visualizations; here we show the data in 3D only to illustrate what higher dimensions and nearest neighbors look like, for learning purposes.", fig.retina=2, out.width="80%"}
 attrs <- c("Perimeter", "Concavity", "Symmetry")
 
 # create new scaled obs and get NNs
@@ -640,16 +640,6 @@ if(!is_latex_output()){
   knitr::include_graphics("img/plot3d_knn_classification.png")
 }
 ```
-
-
-```{r, eval=knitr::is_html_output(), echo=FALSE}
-cat('Click and drag the plot above to rotate it, and scroll to zoom.')
-```
-
-*Note that in
-general we recommend against using 3D visualizations; here we show the data in
-3D only to illustrate what "higher dimensions" and "nearest neighbors" look like,
-for learning purposes.*
 
 ### Summary of $K$-nearest neighbors algorithm
 
