minor typo fix clustering

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -839,7 +839,7 @@ penguin_clust_ks
 
 If we wanted to get one of the clusterings out 
 of the list column in the data frame,
-we can a familiar friend: `pull`.
+we could use a familiar friend: `pull`.
 `pull` will return to us a data frame column as a simpler data structure,
 here that would be a list.
 And then to extract the first item of the list, 
