fixing figure captions in jupyter and version control

--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -260,7 +260,10 @@ image_read("img/out-of-order-2.png") |>
   image_crop("3632x800")
 ```
 
-```{r out-of-order-3, echo = FALSE, fig.cap = 'Code that was written out of order, and was executed in a linear order using "Restart Kernel and Run All Cells..." This resulted in an error at the execution of the second code cell and it failed to run all code cells in the notebook.', fig.retina = 2, out.width="100%"}
+
+(ref:out-of-order-3) Code that was written out of order, and was executed in a linear order using "Restart Kernel and Run All Cells..." This resulted in an error at the execution of the second code cell and it failed to run all code cells in the notebook.
+
+```{r out-of-order-3, echo = FALSE, fig.cap = '(ref:out-of-order-3)', fig.retina = 2, out.width="100%"}
 image_read("img/out-of-order-3.png") |> 
   image_crop("3632x800")
 ```
